<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, Nordic SemcheckBoxductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<androidx.cardview.widget.CardView
		android:id="@+id/sensor_card"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_horizontal_margin"
		android:background="@android:color/white"
		app:cardElevation="1dp">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/sensor_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<androidx.appcompat.widget.Toolbar
				android:id="@+id/sensor_tool_bar"
				android:layout_width="0dp"
				android:layout_height="?actionBarSize"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:logo="@drawable/ic_radio_button_checked"
				app:title="@string/title_led_state"
				app:titleMarginStart="@dimen/toolbar_title_margin"/>

			<TextView
				android:id="@+id/sensor_summary"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:paddingEnd="@dimen/activity_horizontal_margin"
				android:paddingStart="@dimen/activity_horizontal_margin"
				android:text="@string/led_summary"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/sensor_tool_bar"/>

			<TextView
				android:id="@+id/sensor_state"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:padding="@dimen/activity_horizontal_margin"
				android:text="@string/turn_off"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/sensor_summary"/>

			<TextView
				android:id="@+id/sensor_state2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="60dp"
				android:padding="@dimen/activity_horizontal_margin"
				android:text="@string/turn_off"
				app:layout_constraintBottom_toBottomOf="@+id/sensor_state"
				app:layout_constraintStart_toEndOf="@+id/sensor_state"
				app:layout_constraintTop_toTopOf="@+id/sensor_state"
				app:layout_constraintVertical_bias="0.0" />

			<TextView
				android:id="@+id/sensor_state3"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="180dp"
				android:padding="@dimen/activity_horizontal_margin"
				android:text="@string/turn_off"
				app:layout_constraintBottom_toBottomOf="@+id/sensor_state2"
				app:layout_constraintStart_toEndOf="@+id/sensor_state"
				app:layout_constraintTop_toTopOf="@+id/sensor_state2"
				app:layout_constraintVertical_bias="0.0" />

			<TextView
				android:id="@+id/sensor_state4"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:padding="@dimen/activity_horizontal_margin"
				android:text="@string/button_unknown"
				android:textStyle="bold"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/sensor_summary"/>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.cardview.widget.CardView>
</LinearLayout>